[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["vitalii honchar <honchar.vitalii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
Pillow = "8.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
wapiti3 = "^3.1.3"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

